fix print sass to reduce white space

--- a/public/stylesheets/grid.css
+++ b/public/stylesheets/grid.css
@@ -62,21 +62,28 @@ a img {
 #select h4 {
   margin: 10px;
 }
-/* line 9, ../../views/css/_select.sass */
-#select .titulo {
-  font-size: 30px;
-  color: white;
-  font-weight: bold;
-}
-/* line 14, ../../views/css/_select.sass */
+/* line 7, ../../views/css/_select.sass */
 #select #btnGoPrint {
   margin: 10px;
   color: #333333;
   font-size: 14px;
   font-decoration: none;
 }
+/* line 14, ../../views/css/_select.sass */
+#select #txt_titulo {
+  margin: 10px;
+}
 
-/* line 23, ../../views/css/_select.sass */
+/* line 18, ../../views/css/_select.sass */
+.titulo h1 {
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 15px;
+}
+
+/* line 27, ../../views/css/_select.sass */
 .itemList {
   display: inline;
   float: left;
@@ -85,7 +92,7 @@ a img {
   width: 450px;
   margin-left: 0;
 }
-/* line 27, ../../views/css/_select.sass */
+/* line 31, ../../views/css/_select.sass */
 .itemList .imagen {
   margin-top: 20px;
   border: 1px solid #333333;
@@ -100,12 +107,12 @@ a img {
   text-align: center;
   margin: 15px;
 }
-/* line 37, ../../views/css/_select.sass */
+/* line 41, ../../views/css/_select.sass */
 .itemList .imagen img {
   max-width: 200px;
   max-height: 200px;
 }
-/* line 40, ../../views/css/_select.sass */
+/* line 44, ../../views/css/_select.sass */
 .itemList .details {
   margin-top: 20px;
   display: inline;
@@ -116,14 +123,14 @@ a img {
   margin-left: 0;
   margin-right: 0;
 }
-/* line 46, ../../views/css/_select.sass */
+/* line 50, ../../views/css/_select.sass */
 .itemList .details h2 {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 3px;
   margin-top: 20px;
 }
-/* line 52, ../../views/css/_select.sass */
+/* line 56, ../../views/css/_select.sass */
 .itemList .details h3 {
   font-size: 20px;
   font-weight: bold;
@@ -135,19 +142,19 @@ a img {
   margin-top: 7px;
   margin-bottom: 7px;
 }
-/* line 62, ../../views/css/_select.sass */
+/* line 66, ../../views/css/_select.sass */
 .itemList .details h4 {
   margin-top: 40px;
   font-size: 17px;
   min-height: 100px;
 }
-/* line 66, ../../views/css/_select.sass */
+/* line 70, ../../views/css/_select.sass */
 .itemList .details ul {
   overflow: hidden;
   margin-bottom: 5px;
   margin-top: 40px;
 }
-/* line 70, ../../views/css/_select.sass */
+/* line 74, ../../views/css/_select.sass */
 .itemList .details ul li {
   font-size: 15px;
   padding: 0px;
@@ -156,7 +163,7 @@ a img {
   text-transform: capitalize;
 }
 
-/* line 78, ../../views/css/_select.sass */
+/* line 82, ../../views/css/_select.sass */
 .itemsList > li {
   margin-top: 30px;
   display: inline;
@@ -168,7 +175,7 @@ a img {
   overflow: hidden;
   padding-left: 65px;
 }
-/* line 86, ../../views/css/_select.sass */
+/* line 90, ../../views/css/_select.sass */
 .itemsList > li h2 {
   font-size: 15px;
   font-weight: bold;
@@ -176,32 +183,32 @@ a img {
   margin-bottom: 3px;
   margin-top: 8px;
 }
-/* line 92, ../../views/css/_select.sass */
+/* line 96, ../../views/css/_select.sass */
 .itemsList > li h3 {
   font-size: 19px;
   font-weight: bold;
   width: 200px;
   color: #244b84;
 }
-/* line 97, ../../views/css/_select.sass */
+/* line 101, ../../views/css/_select.sass */
 .itemsList > li .imagen {
   overflow: hidden;
   margin-left: 25 px;
   width: 200px;
   height: 200px;
 }
-/* line 102, ../../views/css/_select.sass */
+/* line 106, ../../views/css/_select.sass */
 .itemsList > li .imagen img {
   width: 200px;
   height: 200px;
 }
-/* line 105, ../../views/css/_select.sass */
+/* line 109, ../../views/css/_select.sass */
 .itemsList > li ul {
   max-height: 140px;
   overflow: hidden;
   margin-bottom: 5px;
 }
-/* line 110, ../../views/css/_select.sass */
+/* line 114, ../../views/css/_select.sass */
 .itemsList > li ul li {
   font-size: 12px;
   padding: 0px;
@@ -210,7 +217,7 @@ a img {
   text-transform: capitalize;
 }
 
-/* line 119, ../../views/css/_select.sass */
+/* line 123, ../../views/css/_select.sass */
 #searchBox {
   height: 600px;
   display: inline;
@@ -222,19 +229,19 @@ a img {
   margin-right: 0;
   background-color: #efefef;
 }
-/* line 126, ../../views/css/_select.sass */
+/* line 130, ../../views/css/_select.sass */
 #searchBox .title {
   font-size: 16px;
   font-weight: bold;
   color: #333333;
   margin: 10px;
 }
-/* line 131, ../../views/css/_select.sass */
+/* line 135, ../../views/css/_select.sass */
 #searchBox input {
   margin: 10px;
   padding: 10px;
 }
-/* line 134, ../../views/css/_select.sass */
+/* line 138, ../../views/css/_select.sass */
 #searchBox li {
   display: inline;
   float: left;
@@ -247,12 +254,12 @@ a img {
   border: 1px #333333 solid;
   margin-bottom: 10px;
 }
-/* line 142, ../../views/css/_select.sass */
+/* line 146, ../../views/css/_select.sass */
 #searchBox li a {
   color: #333333;
 }
 
-/* line 145, ../../views/css/_select.sass */
+/* line 149, ../../views/css/_select.sass */
 #selectedBox {
   display: inline;
   float: left;
@@ -265,28 +272,28 @@ a img {
   border: 1px solid #999999;
   height: 600px;
 }
-/* line 152, ../../views/css/_select.sass */
+/* line 156, ../../views/css/_select.sass */
 #selectedBox h4 {
   color: #333333;
   font-size: 16px;
   margin-top: 8px;
   margin-left: 8px;
 }
-/* line 157, ../../views/css/_select.sass */
+/* line 161, ../../views/css/_select.sass */
 #selectedBox h5 {
   color: #999999;
   font-size: 12px;
   margin-left: 8px;
   margin-bottom: 8px;
 }
-/* line 162, ../../views/css/_select.sass */
+/* line 166, ../../views/css/_select.sass */
 #selectedBox li {
   background-color: #efefef;
   padding: 10px;
   border: 1px #333333 solid;
   margin: 6px;
 }
-/* line 167, ../../views/css/_select.sass */
+/* line 171, ../../views/css/_select.sass */
 #selectedBox li a {
   color: #333333;
 }
