--- a/views/css/_select.sass
+++ b/views/css/_select.sass
@@ -4,13 +4,6 @@ $ninesixty-columns: 16
 
 	h4
 		margin: 10px
-		
-
-	.titulo
-		font-size: 30px
-		color: #fff
-		font-weight: bold
-
 	#btnGoPrint
 		margin: 10px
 		color: #333
@@ -18,7 +11,18 @@ $ninesixty-columns: 16
 		font-decoration: none
 
 
-	#txt_titulo
+	#txt_titulo		
+		margin: 10px
+	
+.titulo
+	h1
+		font-size: 30px
+		color: #fff
+		font-weight: bold
+		text-align: center
+		padding-top: 15px
+
+
 
 .itemList
 	+grid-unit-base
